# wasm-interpreter

./: .gitignore  CMakeLists.txt  DECODER_IMPLEMENTATION.md  DESIGN.md  PROGRESS.md  README.md  fast_text.txt  test_runner.sh
include/: decoder.h  instructions.h  interpreter.h  memory.h  module.h  stack.h  types.h
src/: decoder.cpp  instructions.cpp  interpreter.cpp  main.cpp  memory.cpp  module.cpp  stack.cpp  types.cpp
tests/: run_all_tests.cpp  test_decoder.cpp  test_runner.cpp  test_runner_02.cpp  test_runner_03.cpp
tests/wat/: 01_test.wat  02_test_prio1.wat
